2014-09-23  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_intraframe_reg.m: (0.1.0)

	- histology_intraframe_reg Registration diffusion of histology
	slices.

	* Add matlab/CardiacToolbox/histology_preprocessing.m: (0.1.0)

	- histology_preprocessing Prepare slices for intra-histology
	registration.

2014-09-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix_read_file2param.m: (0.2.1)
	* matlab/ItkToolbox/elastix_write_param2file.m: (0.2.1)

	- Fix bug. Not all files will have field
	"InitialTransformParametersFileName", e.g. registration parameter
	files would ignore that field. The function was giving an error if
	the field was not present.

	* matlab/ItkToolbox/elastix.m: (0.3.2)
	* matlab/ItkToolbox/transformix.m: (0.2.2)

	- If transform/parameter files are nested, delete all of them.

	* Add matlab/ItkToolbox/elastix_delete_param_file.m: (0.1.0)

	- elastix_delete_param_file Delete nested transform files.

2014-09-16  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/ItkToolbox/elastix_compose_transf.m as
	matlab/ItkToolbox/elastix_compose_afftransf.m:
	* matlab/CardiacToolbox/blockface_correct_frame_shifts.m: (0.1.1)
	* matlab/ItkToolbox/elastix_transf_imcoord2.m: (0.1.1)
	* Rename matlab/test/test_elastix_compose_transf.m as
	matlab/test/test_elastix_compose_afftransf.m:

	- elastix/transformix work also with transforms that are not
	affine (e.g. B-spline), so this function name is misleading.

	* matlab/ItkToolbox/elastix_read_file2param.m: (0.2.0)

	- Enable nested transforms.

	* matlab/ItkToolbox/elastix_write_param2file.m: (0.2.0)

	- Enable nested transforms.

2014-09-05  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix.m: (0.3.1)

	- Kind of fix bug, but not completely. When an initial transform
	is provided, the result transform provided by elastix links to it
	in field t.InitialTransformParametersFileName. When the initial
	transform is provided as a struct, this means that we return a